# PlanetWasm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-wasm.sh
assets/: examplePath1.json  examplePath2.json  examplePath3.json
qml/: main.qml
qml/components/: AddArcPanel.qml  AddLinePanel.qml  ArcPanel.qml  MainPanel.qml  PointImportPanel.qml  arc.qml  line.qml  track.qml
qml/shaders/: arc.frag
src/: constants.h  main.cpp
src/controllers/: ArcBridge.h  ArcController.h  JsonPointsLoader.h  LineBridge.h  LineController.h  TrackController.h
src/geometry/: arcgeometry.cpp  arcgeometry.h  straightline.cpp  straightline.h  trackgeometry.h  utils.h
